name:                annotations
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ethanpailes/annotations#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          ethanpailes@gmail.com
copyright:           2017 Ethan Pailes
category:            Meta
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , template-haskell >= 2.10
                     , haskell-src-meta >= 0.6
  default-language:    Haskell2010

Test-Suite test-nnotations
  type:       exitcode-stdio-1.0
  main-is:    Spec.hs
  hs-source-dirs:      test, src
  build-depends:       base >= 4.7 && < 5
                     , template-haskell >= 2.10
                     , haskell-src-meta >= 0.6
                     , HUnit >= 1.3

  Other-modules: Lib

source-repository head
  type:     git
  location: https://github.com/ethanpailes/annotations
